
[v1.1.2p1a]
 - API: WizardSplitDockStation has a new property "resizeOnRemove", if set the size of a column is automatically reset if one of its children is removed
 - Bugfix: WizardSplitDockStation sometimes did not allow moving the divider if the internal tree of Dockables had placeholders at the wrong locations
 - API: AbstractScreenDockWindow will call checkWindowBounds if the minimum size of its content changes.
 - Bugfix: When removing a Dockable from a column of a WizardSplitDockStation, the column kept its current size *including* the size of the Span
 - Bugfix: Moving a Dockable from one column of a WizardSplitDockStation to another now updates the size of the column from which the Dockable was removed.
 - Bugfix: Layout of ToolbarGroupDockStation could not be properly saved. 
 - Bugfix: GlassedPane does no longer re-send a MouseEvent that it already has sent. This could happen if a MouseListener was added to a JFrame, but the MouseListener did not consume the MouseEvent.

[v1.1.2p1b]
 - API: when removing a Dockable from a StackDockStation, the station tries to be more intelligent with selecting the next focused Dockable: it uses the FocusHistory instead of just selecting the "index+1'th" tab.
 - Bugfix: When a DockStation with children was put onto another DockStation at a location where a placeholder-map was available, that map could have been applied to the new child station. This was wrong: the station already had a layout, it did not need a new one.
 - Bugfix: Made the arch of the Eclipse-tab a bit more smooth

[v1.1.2p1c]
 - Bugfix: GlassedPane could throw exception when mouse was moved at the wrong time

[v1.1.2p1d]
 - Bugfix: Fixed a bug where CControl could no longer read layouts stored in the binary format
 
[v1.1.2p1e]
 - API: The "toFront" method of AbstractCDockable is more powerful now: it even requests the focus if the application is not visible (yet).
     
[Todo]
- Drop StackDockStation over Dockable and merge them